...
  onPress,
}: {
  children: ReactNode;
  onPress?: (event: GestureResponderEvent) => void;
}) => {
  return (
    <TouchableWithoutFeedback onPress={onPress} testID="customer._layout.on-press">
      <View className="flex-1 items-center justify-center">{children}</View>
    </TouchableWithoutFeedback>
  );
};

export default function TabsLayout() {
...
