...
          <SettingsRow
            icon={THEME_OPTIONS[0].icon}
            label={t(THEME_OPTIONS[0].labelKey)}
            onPress={() => setTheme(THEME_OPTIONS[0].mode)}
            showChevron={false}
            rightElement={renderRadio(theme === THEME_OPTIONS[0].mode)}
            testID="customer.settings.app-appearance.set-theme-light"
          />
          <SettingsRow
            icon={THEME_OPTIONS[1].icon}
            label={t(THEME_OPTIONS[1].labelKey)}
            onPress={() => setTheme(THEME_OPTIONS[1].mode)}
            showChevron={false}
            rightElement={renderRadio(theme === THEME_OPTIONS[1].mode)}
            testID="customer.settings.app-appearance.set-theme-dark"
          />
          <SettingsRow
            icon={THEME_OPTIONS[2].icon}
            label={t(THEME_OPTIONS[2].labelKey)}
            onPress={() => setTheme(THEME_OPTIONS[2].mode)}
            showChevron={false}
...
